data/derived/sp14/progs/unify/prog3202.ml.out
Characters 148-152:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
